fixed map spacing, z-index and closed results class

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  z-index: 900;
   margin: 0 auto;
   background-color: #222;
   height: 120px;
